fix(settings): prevent accidental whitespace when copying passphrase

--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -136,3 +136,7 @@ $status-bar-height: 30px;
     transform: scale(1);
   }
 }
+
+.no-select {
+  user-select: none;
+}
