--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -50,4 +50,5 @@
 
 .passphrase {
   font-weight: $font-weight-bold;
+  user-select: text;
 }
